# my-os

./: #README.md#  .#README.md  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  boot_sect.asm  boot_sect_2.asm  x86_64-my_os.json
16bit/: boot_sect.asm  boot_sect_print.asm  boot_sect_print_hex.asm
32bit/: main.asm
boot/: boot_sect.asm  main.asm
boot/disk/: disk_load.asm
boot/pm/: print_string_pm.asm
drivers/: ports.c  screen.c
kernel/: kernel.c
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  long_mode_init.asm
src/memory/: area_frame_allocator.rs  mod.rs
