[package]
name = "my_os"
version = "0.1.0"
authors = ["Timo de Kort (Napokue)"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
volatile = "0.1.0"
spin = "0.4.5"
multiboot2 = "0.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-my_os"